--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 
 
       <!-- content box -->
-      <div class="w-full min-h-[520px] bg-white flex rounded-md relative p-10 py-12">
+      <div class="w-full min-h-[520px] mt-16 bg-white flex rounded-md relative p-10 py-12 border">
 
         <!-- left section -->
-        <div class="flex flex-col justify-between items-center w-full">
+        <div class="flex flex-col justify-between w-full">
           <h3 class="font-mullish text-[28px] leading-10 font-bold max-w-[500px]">
             Supercharge your business with the all-powerfull
             <span class="text-lightBlue">Payment Gateway</span>
@@ -202,15 +202,25 @@
           </ul>
 
 
-          <div>
-            <button>Sign Up Now</button>
+          <div class="flex flex-row items-center space-x-4">
+            <button class="flex bg-lightBlue text-white rounded-md py-[14px] px-[18px] font-mullish font-bold
+            hover:bg-lightBlue500 transition-all duration-200"
+            >Sign Up Now
+            <img src="assets/white_arrow-right.svg" class="ml-1.5 self-center" width="22px" alt="#"/>
+            </button>
 
-            <div>
-              <a href="">Know More</a>
+            <div class="flex items-center cursor-pointer group">
+              <a href=""
+              class="font-mullish font-bold text-lightBlue500 
+               group-hover:text-grayBlue transition-all duration-200"
+              >Know More </a>
+              <img src="assets/angle-right_gray.svg" class="mt-0.5 hidden group group-hover:block transition-all duration-200" width="22px" alt="#"/>
+              <img src="assets/angle-right.svg" class="mt-0.5 group-hover:hidden transition-all duration-200" width="22px" alt="#"/>
             </div>
           </div>
 
-          <img src="assets/payment-suite.png" alt="">
+          <img src="assets/payment-suite.png" alt=""
+           class="max-w-[600px] absolute right-0 bottom-0">
         </div>
       </div>
     </div>
