testimonial section complete

--- a/index.html
+++ b/index.html
@@ -1295,5 +1295,105 @@
         </div>
   </section>
 
+
+  <!--------------------- Testimonail section ----------------->
+  <section 
+    class="relative ">
+      <div
+        class="w-11/12 max-w-[1300px] mx-auto relative py-20">
+         
+        <img src="assets/feature-section1-dottedrows.png" alt=""
+          class="absolute w-[200px] top-[8rem] left-[2rem] -z-10">
+
+         <h2
+           class="font-mullish text-center text-deepBlueHead font-extrabold text-2xl ">
+           An Experience <br>
+           People Love to Talk About</h2>
+         <div class="h-1 w-6 mt-4 bg-greenLight mx-auto"></div>
+
+
+         <!-- left button -->
+         <button
+            class="absolute w-[100px] h-[100px] bg-[#f4f8ff] rounded-full left-0 top-1/2 
+              flex justify-center items-center">
+            <div
+              class="w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center 
+                items-center mix-blend-multiply">
+              <img src="assets/angle-right-grey-bolder.svg" width="30px" alt="#"
+                class="rotate-[180deg]"/>
+            </div>
+         </button>
+
+         <!-- main Content -->
+         <div 
+           class="flex flex-row max-w-[960px] items-center mx-auto my-20 space-x-[10rem]">
+            <!-- left image -->
+            <img src="assets/testimonial.jpg" alt="" loading="lazy" width="320px" height="320px"
+              class="rounded-xl" >
+
+            <!-- right text -->
+            <div
+              class="max-w-[400px]">
+               <img src="assets/quotes.svg" alt="" width="35px" height="40px" 
+                class="-mb-2">
+
+               <p
+                class="font-mullish text-3xl font-extralight">
+                Readymade Closed Wallet
+                Solution For Quick Refunds</p>
+
+               <a href="" 
+                 class="text-grayText italic underline">
+                 Learn More</a>
+
+               <h3
+                 class="font-mullish font-extrabold text-2xl ">
+                 Lorem Ipsum</h3>
+
+               <p
+                class="font-mullish font-medium">
+                 CEO, XYZ Engineering Company</p>
+
+               <img src="assets/fake-company-logo.png" alt="" width="80px" height="40px">
+            </div>
+         </div>
+
+          <!-- right button -->
+          <button
+            class="absolute w-[100px] h-[100px] bg-[#f4f8ff] rounded-full flex
+               justify-center items-center right-0 top-1/2">
+             <div
+              class="w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center 
+                items-center mix-blend-multiply">
+              <img src="assets/angle-right-grey-bolder.svg" width="30px" alt="#"/>
+             </div>
+          </button>
+
+        <!-- 6 dot navigation -->
+        <div
+          class="w-full flex flex-row justify-center mx-auto space-x-2">
+           
+           <!-- dot 1 -->
+           <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+
+            <!-- dot 2 -->
+            <div class="h-[10px] w-[10px] bg-lightBlue300 rounded-full"></div>
+
+             <!-- dot 3 -->
+           <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+
+            <!-- dot 4 -->
+            <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+
+             <!-- dot 5 -->
+           <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+
+            <!-- dot 6 -->
+            <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+        </div>
+
+      </div>
+  </section>
+
 </body>
 </html>
