--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link href='https://fontawesome.com/icons/arrow-right?f=classic&s=solid&pc=%230b72e7' rel='stylesheet'>
     <link href="https://fontawesome.com/icons/check?f=classic&s=regular&pc=%2385dfca" rel="stylesheet">
     <style>
+      .ctaSection {
+        background-size: 100% 100%;
+      }
+
       .companyList {
-         animation: 10s infinite linear moveCompany;
+        animation: 10s infinite linear moveCompany;
       } 
 
       @keyframes moveCompany {
@@ -30,10 +34,6 @@
 
       .featureShadow {
         box-shadow: 2px 4px 9px 1px hsla(0, 0%, 0%, 0.05);
-      }
-
-      .ctaSection {
-        background-size: 100% 100%;
       }
 
       .featureCard:hover .featureCardIcon {
@@ -1392,6 +1392,84 @@
             <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
         </div>
 
+      </div>
+  </section>
+
+
+  <!--------------------- CTA section ----------------->
+  <section
+    class="bg-[url(assets/CTABg.svg)] w-full h-full bg-no-repeat bg-cover relative min-h-[510px]
+      ctaSection">
+      <!-- main content -->
+      <div
+        class="w-11/12 max-w-[1080px] relative flex flex-row items-center pt-16
+          justify-between space-x-20 mx-auto">
+          
+        <!-- left part -->
+        <div
+          class="flex flex-col gap-5 mt-12 max-w-[600px]">
+            <h2
+              class="font-mullish font-extrabold text-2xl text-white">
+              Supercharge your business with Razorpay</h2>
+            <div class="h-1 w-6 ml-0 bg-greenLight mx-auto"></div>
+
+            <p
+              class="font-mullish text-white">
+              Sign up now to experience the future of payments and offer <br>
+               your customers the best checkout experience.
+            </p>
+
+            <ul 
+              class="flex flex-row flex-wrap gap-x-6 gap-y-3 text-white">
+               <li
+                 class="font-mullish flex flex-row justify-center items-center">
+                <img src="assets/Right_check_mark.svg" alt="#"
+                  class="w-[31px]">
+                <span>Quick onboarding</span>
+               </li>
+
+               <li
+                class="font-mullish flex flex-row justify-center items-center">
+                <img src="assets/Right_check_mark.svg" alt="#"
+                  class="w-[31px]">
+                <span>Access to entire product suite</span>
+               </li>
+
+               <li
+               class="font-mullish flex flex-row justify-center items-center">
+                <img src="assets/Right_check_mark.svg" alt="#"
+                  class="w-[31px]">
+                <span>API access</span>
+               </li>
+
+               <li
+               class="font-mullish flex flex-row justify-center items-center">
+                <img src="assets/Right_check_mark.svg" alt="#"
+                  class="w-[31px]">
+                <span>24x7 support</span>
+               </li>
+            </ul>
+
+            <button class="min-w-[32px] bg-white text-lightBlue300 border flex
+             font-mullish text-sm font-bold rounded-sm justify-center items-center
+           hover:text-lightBlue500 transition-all duration-200 py-3 px-4 place-self-start"
+            >Sign Up Now
+            <svg
+            viewBox="0 0 24 24"
+            focusable="false"
+            class="w-[15px] h-[14px] ml-2"
+            >
+            <path
+              fill="currentColor"
+              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
+            ></path>
+          </svg>
+            </button>
+        </div>
+
+        <!-- right side image -->
+        <img src="assets/ctaImg.svg" alt="" width="240px" height="282px"
+        class="mt-16">
       </div>
   </section>
 
